2005-10-08  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.12.7
	* rsvg-cond.c: Fix up <switch> conditional comparisons
	* rsvg.c: Make XML entities work, thus passing a few more conformance tests. Needs libxml2 2.6.22 or better.
	Disable entities otherwise.

2005-10-08 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-art-paint-server.c: stopped strangely transformed gradients from getting flipped. Bug #318097/#166673
	
2005-10-06  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Let librsvg build out of srcdir. Bug #158331
	* test-display.c: Populate save dialogs with the SVG's name. Bug #318010.
	* configure.in: Ditto
	* rsvg-structure.c: Related to bug #318025, don't set has_width or has_height unless they are > 0.
	* rsvg.c: Bug #168567, mega hack to make multiImage sort-of work.
	* configure.in: 2.12.6
	
2005-10-06  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-paint-server.c: Backport Caleb's patch to 317871, fixing a crash
	inside of libart for some gradients.
	* rsvg-art-paint-server.c: Ditto

2005-10-04  Dom Lachowicz <cinamod@hotmail.com>
	
	* rsvg-shapes.c: Fix problems in non-C locales. Bug #317615
	* configure.in: 2.12.5
	
2005-10-01  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.12.4
	* gdk-pixbuf-loader/io-svg.c: Because bug 308021 was fixed, and bug 317225 still
	exists (although possibly not within librsvg itself), I've re-enabled a match for
	"<?xml", with a priority of "1".
	
2005-10-01  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: bug 314593, support firefox-config
	
2005-09-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix bug #317549
	* configure.in: 2.12.3
	
2005-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Bug 309660 - signedness issues
	* configure.in: 2.12.2
	
2005-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* 2.12.1
	
	* rsvg-structure.c:
	* rsvg-shapes.c: Bug 371148 - C89 fixes

	* gdk-pixbuf-loader/Makefile.am
	* gtk-engine/Makefile.am: Bug 316803 - Win32 mingw build fixes
