@@ -1,3 +1,8 @@
+2005-10-22 Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-cond.c (rsvg_cond_parse_system_language): setlocale(LC_ALL) 
+	may return "C". Evaluate $LANG first, equate "C" with "en".
+	
 2005-10-08  Dom Lachowicz <cinamod@hotmail.com>
 
 	* configure.in: 2.12.7
